[package]
name = "little-dipper"
edition = "2021"
publish = true
version = "0.0.2"
license = "MIT OR Apache-2.0"
description = "Censorship Resistant Simplex."
readme = "README.md"
homepage = "https://github.com/bx3"
repository = "https://github.com/bx3"

[dependencies]
commonware-cryptography = { path = "./monorepo/cryptography" }
commonware-macros = { path = "./monorepo/macros" }
commonware-p2p = { path = "./monorepo/p2p" }
commonware-runtime = { path = "./monorepo/runtime" }
commonware-utils = { path = "./monorepo/utils" }
commonware-consensus = { path = "./monorepo/consensus" }
commonware-storage = { path = "./monorepo/storage" }
commonware-stream = { path = "./monorepo/stream" }

thiserror = "1.0.63"
bytes = "1.7.1"
sha2 = "0.10.8"
rand = "0.8.5"
rand_distr = "0.4.3"
futures = "0.3.30"
futures-util = "0.3.30"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prost = "0.13.2"
governor = "0.6.3"
prometheus-client = "0.22.3"
clap = "4.5.18"
criterion = "0.5.1"
zstd = "0.13.2"
chrono = "0.4.39"
ratatui = "0.27.0"
crossterm = "0.28.1"
serde_json = "1.0.122"

[build-dependencies]
prost-build = "0.13.2"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true

[[bin]]
name = "validator"
path = "src/bin/validator.rs"
bench = false

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"
bench = false

